# realtime-voice-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  main.py
app/services/: audio_processor.py  cache_service.py  sentiment_service.py  stt_service.py  tts_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
app/utils/: circuit_breaker.py
docs/: api.md  architecture.md
tests/: conftest.py  load_test.py  test_audio_processor.py  test_cache_service.py  test_circuit_breaker.py  test_integeration.py  test_main.py  test_sentiment_service.py  test_stt_service.py  test_suite.py  test_tts_service.py
