[project]
name = "realtime-voice-pipeline"
version = "0.1.0"
description = "Low-latency voice processing pipeline with ElevenLabs TTS and Whisper STT"
authors = [
    {name = "Muhammad Abubakar"}
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["voice", "tts", "stt", "elevenlabs", "whisper", "fastapi"]
dependencies = [
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "audioop-lts (>=0.2.2,<0.3.0)"
]

[tool.poetry.scripts]
realtime-voice-pipeline = "app.main:app"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "locust (>=2.42.3,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "asynctest (>=0.13.0,<0.14.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]
docs = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.0,<10.0.0)"
]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"

# mypy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "textblob.*",
    "pydub.*",
    "faster_whisper.*",
]
ignore_missing_imports = true
